# feathr-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
databricks/: Cargo.toml  README.md
databricks/.openapi-generator/: FILES
databricks/docs/: AzureAttributes.md  ClusterAttributes.md  ClusterEvent.md  ClusterInfo.md  ClusterLogConf.md  DefaultApi.md  EventDetails.md  InitScriptInfo.md  InlineObject.md  InlineObject1.md  InlineObject2.md  InlineObject3.md  InlineObject4.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2002.md  InlineResponse2003.md  InlineResponse2004.md  InlineResponse2005.md  InlineResponse2006.md  InlineResponse2007.md  InlineResponse2008.md  Job.md  JobEmailNotifications.md  JobSettings.md  JobTask.md  JobTaskSettings.md  Library.md  NewCluster.md  NotebookOutput.md  NotebookTask.md  PipelineTask.md  PythonWheelTask.md  RepairHistoryItem.md  RepairRunInput.md  Run.md  RunNowInput.md  RunParameters.md  RunSubmitSettings.md  RunSubmitTaskSettings.md  (+9 more)
databricks/src/apis/: configuration.rs  default_api.rs
databricks/src/models/: access_control_list.rs  access_control_request.rs  access_control_request_for_group.rs  access_control_request_for_service_principal.rs  access_control_request_for_user.rs  auto_scale.rs  azure_attributes.rs  can_manage.rs  can_manage_run.rs  can_view.rs  cluster_attributes.rs  cluster_cloud_provider_node_info.rs  cluster_cloud_provider_node_status.rs  cluster_event.rs  cluster_event_type.rs  cluster_info.rs  cluster_instance.rs  cluster_library_statuses.rs  cluster_log_conf.rs  cluster_size.rs  cluster_source.rs  cluster_spec.rs  cluster_state.rs  cron_schedule.rs  dbfs_storage_info.rs  docker_basic_auth.rs  docker_image.rs  error.rs  event_details.rs  file_storage_info.rs  init_script_info.rs  inline_object.rs  inline_object_1.rs  inline_object_2.rs  inline_object_3.rs  inline_object_4.rs  inline_response_200.rs  inline_response_200_1.rs  inline_response_200_2.rs  inline_response_200_3.rs  (+57 more)
dbfs-client/: Cargo.toml
dbfs-client/src/: lib.rs
feathr-client/: Cargo.toml
feathr-client/src/: client.rs  error.rs  feature.rs  feature_builder.rs  feature_query.rs  lib.rs  materialization.rs  model.rs  observation.rs  project.rs  source.rs  utils.rs  var_source.rs
feathr-client/src/job_client/: azure_synapse.rs  databricks.rs  env_utils.rs  mod.rs
feathr-client/src/registry_client/: feathr_api_client.rs  mod.rs  purview_client.rs
feathrs/: .gitignore  Cargo.toml  pyproject.toml
feathrs/src/: lib.rs
livy-client/: Cargo.toml
livy-client/src/: azure_synapse.rs  error.rs  lib.rs  models.rs
src/: client.rs  error.rs  feature.rs  feature_builder.rs  lib.rs  project.rs  source.rs  var_source.rs
src/dbfs_client/: mod.rs
src/job_client/: azure_synapse.rs  databricks.rs  mod.rs
src/livy_client/: azure_synapse.rs  mod.rs
src/registry_client/: feathr_api_client.rs
src/registry_client/api_models/: mod.rs
test-script/: feathr_config.yaml  pyspark-test.py
