[package]
name = "dbfs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
bytes = "1"
regex = "1"
chrono = "0.4"
futures = "0.3"
async-trait = "0.1.53"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive", "rc"], default-features = false }
serde_json = "1"
reqwest = { version = "0.11", features = ["multipart", "stream", "json"] }
base64 = "0.13.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"]}
env_logger = "0.9"
rand = "0.8"