[package]
name = "feathr-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
regex = "1"
async-trait = "0.1.53"
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive", "rc"], default-features = false }
serde_json = "1"
serde-aux = "3"
reqwest = "0.11"
indexmap = { version = "1", features = ["serde"]}