[package]
name = "feathr-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
bytes = "1"
regex = "1"
chrono = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1.53"
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive", "rc"], default-features = false }
serde_json = "1"
serde_yaml = "0.8"
reqwest = "0.11"
indexmap = { version = "1", features = ["serde"]}
oauth2 = "4"
azure_core = "0.1.1"
azure_identity = "0.1.1"
azure_storage = "0.1"
azure_storage_datalake = "0.1.1"
azure_security_keyvault = "0.1"
livy-client = { path = "../livy-client", features = ["default"] }
dbfs-client = { path = "../dbfs-client" }
handlebars = "4"
base64 = "0.13"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"]}
env_logger = "0.9"
