[package]
name = "livy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
tokio = { version = "1", default-features = false }
async-trait = "0.1"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
serde_with = { version = "1", features = ["default", "chrono"] }
reqwest = "0.11"
chrono = {version = "0.4", optional = true}
azure_core = { version = "0.1.1", optional = true }
azure_identity = { version = "0.1.1", optional = true }
oauth2 = { version = "4", optional = true }

[features]
default = ["azure-synapse"]
azure-synapse = ["azure_core", "azure_identity", "oauth2", "chrono"]

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"]}
env_logger = "0.9"
